@@ -14,6 +14,7 @@ acct_mgr-0.5 (not yet released) - branch 0.11
  * #7426: Dynamicity of Trac (Show number of registered users)
  * #8595: Ability to ban accounts
  * #10739: Move 'Back to Accounts' button to the contextual navigation
+ * #10741: Provide email verification status indicator on user admin panel
  * #10742: Rename "Update" button to "Refresh" on Review Account Details page
  * add unit tests for db access functions
  * add account guard configuration to config admin panel
